# AutoRoot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: build-doc.yml  python-linter.yml  python-tests.yml
autoroot/: __init__.py  types.py
autoroot/complex/: complex_utils.py
autoroot/torch/complex/: complex_utils.py
autoroot/torch/cubic/: __init__.py  cubic.py
autoroot/torch/quartic/: __init__.py  quartic.py
docs/: make.bat
docs/source/: conf.py  contribute.md  getting_started.md  index.md  install.md  requirements.txt  tutorials.md  tutorials.template.md
docs/source/api/: modules.md
tests/: conftest.py  test_complex.py  test_cubic.py  test_quartic.py
tutorials/: Tutorial_1_cubic_solving_with_Cardano.ipynb  Tutorial_1_quartic_solving_with_Ferrari.ipynb
tutorials/.ipynb_checkpoints/: Tutorial_1_cubic_solving_with_Cardano-checkpoint.ipynb
